--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
